implemented palm trees

--- a/public/index.css
+++ b/public/index.css
@@ -14,7 +14,7 @@ body {
   width: 35%;
   bottom: 0;
   right: 0;
-  transition-duration: 0.08s;
+  transition-duration: 0.1s;
   transition-property: transform margin;
   margin-bottom: -150px;
   margin-right: -150px;
@@ -23,8 +23,8 @@ body {
 
 .hit {
   margin-bottom: -50px !important;
-  margin-right: 50px !important;
-  transform: rotateY(120deg) rotateZ(0deg) !important;
+  margin-right: 150px !important;
+  transform: rotateY(120deg) rotateZ(0deg) scale(80%) !important;
 }
 
 #item-bar {
