--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,12 @@ body {
   margin: 0;
   background-color: black;
   overflow: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none; 
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #crosshair {
