--- a/public/index.css
+++ b/public/index.css
@@ -91,12 +91,20 @@ body {
   top: 0;
   display: flex;
   margin: 10px;
-  width: 40%;
+  width: 50%;
   z-index: 10;
 }
 
-.option-buttons > div {
+.option-buttons > *:not(:first-child) {
   margin-left: 10px;
+}
+
+.option-buttons > a > div > img {
+  height: 30px;
+}
+
+#github-link, #linkedin-link {
+  width: 40px;
 }
 
 .button-container {
@@ -109,7 +117,7 @@ body {
 
 .button {
   height: 100%;
-  width: 100%;;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -135,6 +143,115 @@ body {
 
 .mobile {
   display: none;
+}
+
+#professional-experience-modal,
+#education-modal,
+#personal-projects-modal,
+#competitions-modal,
+#leadership-modal,
+#hobbies-modal {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+
+.backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-container {
+  width: 70%;
+  height: 90%;
+  border-top: 3px solid black;
+  border-right: 9px solid black;
+  border-bottom: 9px solid black;
+  border-left: 3px solid black;
+}
+
+.modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(198, 198, 198);
+  border-top: 3px solid white;
+  border-left: 3px solid white;
+  border-right: 3px solid rgb(85, 85, 85);
+  border-bottom: 3px solid rgb(85, 85, 85);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal__container {
+  width: 95%;
+  height: 95%;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__container__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal__container__header__title {
+  color: black;
+  font-size: 2rem;
+  flex: 1;
+}
+
+.modal__container__content {
+  overflow-y: scroll;
+}
+
+.entity {
+  margin-top: 2.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  color: black;
+  font-size: 1.75rem;
+}
+
+.secondary-title {
+  color: blue;
+}
+
+.date-location {
+  color: green;
+  font-size: 1.25rem;
+}
+
+.description {
+  color: gray;
+}
+
+.close_button {
+  width: 150px;
+}
+
+.links {
+  display: flex;
+}
+
+.links > a {
+  width: 200px;
+}
+
+.links > a:not(:first-child) {
+  margin-left: 1rem;
 }
 
 @media screen and (max-width : 1024px) {
