--- a/menu.css
+++ b/menu.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-image: url(/assets/backgrounds/main-menu-background.webp);
+  background-image: url(./assets/backgrounds/main-menu-background.webp);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 100%;
